[project]
name = "plugin-giphy"
version = "0.2.0"
description = "Drop the right GIF into chat at the right moment — GIPHY search + inline reactions for Luna. Built on luna_sdk v0."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plugin_giphy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
